--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -50,6 +50,7 @@
     </header>
 <!--Chi Siamo-->
 <img class="logo mt-4 mx-5" src="img_uomo/Screenshot_2024-01-28_205019-removebg-preview.png" alt="logo" height="80rem">
+<div class="container">
     <main class="chi-siamo mx-5">
         <span>
             <div class="card mx-4 mb-5" style="width: 28rem;">
@@ -82,6 +83,7 @@
           </div>
         </span>
     </main>
+</div>
 <!--pagination-->
 <div aria-label="Page navigation example">
     <ul class="pagination justify-content-end mb-5 mx-5">
